# r4djBot

./: .gitignore  CHANGELOG.md  aiogram_run.py  config.py  create_bot.py  log_setup.py  pyproject.toml  requirements.txt  requirements_dev.txt
aiogram_calendar/: __init__.py  common.py  dialog_calendar.py  schemas.py
alembic/: env.py
alembic/versions/: 2026_01_14_0959-32aac5ad4020_hashcode_nullable_true.py  2026_01_14_1032-662dff1baad8_hashcode_unique.py  2026_01_14_1145-5fa433891f05_users_add_usernamen.py  2026_01_16_1413-74d631e37563_user_id_biginteger.py  2026_01_23_0916-d8ef26d69e01_add_orders_with_simple_enum.py  2026_01_25_0959-434ab513ad16_order_item_association.py  2026_01_25_1053-3d997cd74a67_add_unit_price_to_order_item.py  2026_01_25_1110-e507602a0b37_change_order_user_id_fk_to_user_user_id.py
db_handler/: __init__.py  api_calls.py  bulk_operations.py  connection.py  crud.py  db_class.py  db_helper.py
db_handler/models/: __init__.py  item.py  order.py  order_item_association.py  user.py
filters/: __init__.py  custom.py
handlers/: __init__.py  contacts.py  error_commands.py  help.py  manager_private.py  order.py  register.py  show_details.py  start.py  unknown_command.py  user_private.py
keyboards/: __init__.py  inline.py  inline_keyboard.py  keyboard.py
middlewares/: db.py
schedulers/: schedulers.py
tests/: test_api_server.py  test_handlers.py  test_order_msg_builder.py  test_utils.py
utils/: __init__.py  api_server.py  db_utils.py  messages.py  order_msg_builder.py  utils.py
webapp/: api.js  app.js  index.html  style.css  utils.js
(+3 files in other folders)
