[project]
name = "r4djBot"
version = "1.0.0"  
description = "telegram bot for rent4dj company"


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


[tool.semantic_release]
version_variable = "version.py:__version__"
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true